# bim-ai

./: .coverage  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CODE_QUALITY.md  HANDOVER.md  Makefile  OPEN_TASKS.md  README.md  eslint.config.js  hof-module.json  package.json  pnpm-lock.yaml  prettier.config.mjs  prompt-1.md  prompt-2.md  prompt-3.md  prompt-4.md  prompt-5.md  prompt-6.md  prompt-7.md  prompt-8.md  prompt-9.md  prompt-ui.md  prompt.md  tsconfig.base.json  ux-revamp.md  wave-3-prompt-1.md  wave-3-prompt-2.md  wave-3-prompt-3-fix.md  wave-3-prompt-3.md  wave-3-prompt-4.md  wave-3-prompt-5.md  wave-3-prompt-6.md  wave-3-prompt-7.md  wave-3-prompt-8.md
app/: .coverage  pyproject.toml
app/bim_ai/: __init__.py  activity.py  agent_brief_acceptance_readout.py  agent_brief_command_protocol.py  agent_evidence_review_loop.py  agent_generated_bundle_qa_checklist.py  agent_loop.py  agent_review_readout_consistency_closure.py  ai_boundary.py  architecture_lens_query.py  area_calculation.py  assets.py  backend_render.py  bcf_issue_package_export.py  ci_gate_runner.py  clash_engine.py  codes.py  commands.py  comments.py  config.py  constraints.py  constraints_advisories.py  constraints_core.py  constraints_evaluation.py  constraints_geometry.py  constraints_metadata.py  constraints_sheet_viewports.py  constraints_tail_advisories.py  constraints_wall_geometry.py  constructability_advisories.py  constructability_bcf.py  constructability_clearance.py  constructability_geometry.py  constructability_issues.py  constructability_matrix.py  (+118 more)
spec/: prd.md  (+45 more)
(+11450 files in other folders)
